PP-593 Fixing Payment events response
* Using the SelfLink object to include only a self link to the payment.
* Using the correct PaymentEvents class for documentation purposes.
* Documenting the properties of payment events so they show up correctly
  in gelato.
